--- a/research-areas.html
+++ b/research-areas.html
@@ -10,7 +10,7 @@ title: Research areas - Maths@IISc
     <li> <h4 id="commutative-algebra-and-algebraic-geometry-abhishek-banerjee-dilip-patil"> Commutative Algebra and Algebraic Geometry (<a href="https://sites.google.com/site/abhishekb1313/">Abhishek Banerjee</a>, <a href="http://math.iisc.ac.in/~patil/">Dilip Patil</a>)</h4>
 <p>Study of derivation modules of curves and hypersurfaces, connection with Zariski - Lipman conjecture, monomial curves, complete intersections and set theoretic complete intersections, intersection theory of algebraic varieties, minimal number of generators for ideals and modules. Study of certain algebraic surfaces.</p></li>
 <li> <h4 id="representation-theory-pooja-singla-r-venkatesh-apoorva-khare"> Representation theory (<a href="https://sites.google.com/site/poojasingla7/Home">Pooja Singla</a>, <a href="http://math.iisc.ac.in/~rvenkat/">R. Venkatesh</a>, <a href="http://math.iisc.ac.in/~khare/">Apoorva Khare</a>)</h4>
-    </li>
+  <p>Representations of finite groups and finite dimensional associative algebras. Representations of p-adic groups and of other linear groups with entries from local rings, Representations of finitely generated discrete groups </p>  </li>
     <li><h4 id="number-theory-soumya-das"> Number theory (<a href="https://sites.google.com/site/somuhomepage/">Soumya Das</a>)</h4></li>
 </ul>
 </p>
@@ -18,14 +18,14 @@ title: Research areas - Maths@IISc
 <h3 id="analysis">Analysis</h3>
 <p>
   <ul> 
-    <li> <h4 id="matrix"> Positivity and matrix analysis (<a href="http://math.iisc.ac.in/~khare/">Apoorva Khare</a>) </h4><p>Positive matrices and functions operating on them, positivity preservation, structured matrices</p></li>
     <li><h4 id="differential-equations-ak-nandakumaran-thirupati-gudi">Differential Equations (<a href="http://math.iisc.ac.in/~nands/">A.K. Nandakumaran</a>, <a href="http://math.iisc.ac.in/~gudi/">Thirupati Gudi</a>)</h4>
 <p> Homogenization of partial differential equations, controllability, viscosity solutions, numerical analysis.</p> </li>
     <li><h4 id="functional-analysis-and-operator-theory-gadadhar-misra-tirthankar-bhattacharya">Functional Analysis and Operator Theory (<a href="http://math.iisc.ac.in/~gm/">Gadadhar Misra</a>, <a href="http://math.iisc.ac.in/~tirtha/">Tirthankar Bhattacharya</a>)</h4>
       <p> Hilbert modules, multivariable operator theory, Hilbert space operator theory in some domains in two and three dimensional complex spaces.</p></li>
     <li><h4 id="harmonic-analysis-s-thangavelu-e-k-narayanan">Harmonic Analysis (<a href="http://math.iisc.ac.in/~veluma/">S. Thangavelu</a>, <a href="http://math.iisc.ac.in/~naru/">E. K. Narayanan</a>)</h4>
 <p> Analysis on the Heisenberg group and generalisations such as H-type groups, analysis on symmetric spaces of non compact type and on semisimple Lie groups, spectral multipliers of Laplcians and sub-Laplacians on these spaces, integral geometry on homogeneous spaces and relations with complex analysis.</p>
-      <li> <h4 id="several-complex-variables-kaushal-verma-gautam-bharali-vamsi-pritham-pingali">Several Complex Variables (<a href="http://math.iisc.ac.in/~kverma/">Kaushal Verma</a>, <a href="http://math.iisc.ac.in/~bharali/">Gautam Bharali</a>, <a href="http://math.iisc.ac.in/~vamsipingali/">Vamsi Pritham Pingali</a>)</h4>
+    <li> <h4 id="matrix"> Positivity and matrix analysis (<a href="http://math.iisc.ac.in/~khare/">Apoorva Khare</a>) </h4><p>Positive matrices and functions operating on them, positivity preservation, structured matrices</p></li> 
+    <li> <h4 id="several-complex-variables-kaushal-verma-gautam-bharali-vamsi-pritham-pingali">Several Complex Variables (<a href="http://math.iisc.ac.in/~kverma/">Kaushal Verma</a>, <a href="http://math.iisc.ac.in/~bharali/">Gautam Bharali</a>, <a href="http://math.iisc.ac.in/~vamsipingali/">Vamsi Pritham Pingali</a>)</h4>
 <p> Holomorphic mappings, convexity and its applications to function theory, finite-type domains, pluripotential theory, holomorphic interpolation, Ohsawa-Takegoshi type extension theorems, and complex dynamical systems.</p>
     </li>
     </li>
@@ -36,7 +36,8 @@ title: Research areas - Maths@IISc
 <p>
   <ul>
 <li><h4 id="discrete-mathematics-and-linear-algebra-arvind-ayyer-apoorva-khare-srikanth-k-iyer"> Combinatorics (<a href="http://math.iisc.ac.in/~arvind/">Arvind Ayyer</a>, <a href="http://math.iisc.ac.in/~skiyer/">Srikanth K. Iyer</a>)</h4>
-    <p> Algebraic and enumerative combinatorics,  random geometric graphs.</p></li>
+    <p> Algebraic and enumerative combinatorics,  random geometric graphs, graph limits, symmetric functions, Schur polynomials, determinantal identities,
+Coxeter groups, lattice polytopes and polyhedra.</p></li>
 </ul>
 </p>
 
@@ -79,15 +80,16 @@ title: Research areas - Maths@IISc
 </p>
 
 
-<h3 id="probab">Probability and Statistics</h3>
+<h3 id="probab">Probability and statistics</h3>
 <p>
   <ul>
-    <li><h4 id="probability-and-stochastic-processes-manjunath-krishnapur-srikanth-k-iyer-mrinal-k-ghosh">Probability and Stochastic Processes (<a href="http://math.iisc.ac.in/~manju/">Manjunath Krishnapur</a>, <a href="http://math.iisc.ac.in/~skiyer/">Srikanth K. Iyer</a>, <a href="http://math.iisc.ac.in/~mkg/">Mrinal K. Ghosh</a>, <a href="http://math.iisc.ac.in/~arvind/">Arvind Ayyer</a>)</h4>
+    <li><h4 id="probability-and-stochastic-processes-manjunath-krishnapur-srikanth-k-iyer-mrinal-k-ghosh">Probability theory and Stochastic Processes (<a href="http://math.iisc.ac.in/~manju/">Manjunath Krishnapur</a>, <a href="http://math.iisc.ac.in/~skiyer/">Srikanth K. Iyer</a>, <a href="http://math.iisc.ac.in/~mkg/">Mrinal K. Ghosh</a>, <a href="http://math.iisc.ac.in/~arvind/">Arvind Ayyer</a>)</h4>
 <p> Markov processes, random matrix theory, zeroes of analytic functions, stability and control of stochastic systems, diffusion and related topics, stochastic dynamic games, applications to manufacturing systems, first passage time problems for anomalous diffusion, long memory processes, branching particle systems, stochastic differential equations, queuing theory.</p>
 </li>
     <li><h4 id="time-series-analysis-govindan-rangarajan-srikanth-k-iyer">Time Series Analysis (<a href="http://math.iisc.ac.in/~rangaraj/">Govindan Rangarajan</a>, <a href="http://math.iisc.ac.in/~skiyer/">Srikanth K. Iyer</a>)</h4>
-<p> Application of time series analysis techniques to neuroscience esp. brain-machine interface, applications to geophysics, applications to mathematical finance.</p>
+<p> Application of time series analysis techniques to neuroscience esp. brain-machine interface, applications to geophysics.</p>
 </li>
+    <li><h4 id="finance">Mathematical finance (<a href="http://math.iisc.ac.in/~rangaraj/">Govindan Rangarajan</a>, <a href="http://math.iisc.ac.in/~mkg/">Mrinal K. Ghosh</a>) </h4></li>
 </ul>
 </p>
 
