--- a/research-areas.html
+++ b/research-areas.html
@@ -80,7 +80,7 @@ Coxeter groups, lattice polytopes and polyhedra.</p></li>
 </p>
 
 
-<h3 id="probab">Probability and Statistics</h3>
+<h3 id="probab">Probability and its applications </h3>
 <p>
   <ul>
     <li><h4 id="probability-and-stochastic-processes-manjunath-krishnapur-srikanth-k-iyer-mrinal-k-ghosh">Probability theory and Stochastic Processes (<a href="http://math.iisc.ac.in/~manju/">Manjunath Krishnapur</a>, <a href="http://math.iisc.ac.in/~skiyer/">Srikanth K. Iyer</a>, <a href="http://math.iisc.ac.in/~mkg/">Mrinal K. Ghosh</a>, <a href="http://math.iisc.ac.in/~arvind/">Arvind Ayyer</a>)</h4>
