--- a/research-areas.html
+++ b/research-areas.html
@@ -10,7 +10,7 @@ title: Research areas - Maths@IISc
     <li> <h4 id="commutative-algebra-and-algebraic-geometry-abhishek-banerjee-dilip-patil"> Commutative Algebra and Algebraic Geometry (<a href="https://sites.google.com/site/abhishekb1313/">Abhishek Banerjee</a>, <a href="http://math.iisc.ac.in/~patil/">Dilip Patil</a>)</h4>
 <p>Study of derivation modules of curves and hypersurfaces, connection with Zariski - Lipman conjecture, monomial curves, complete intersections and set theoretic complete intersections, intersection theory of algebraic varieties, minimal number of generators for ideals and modules. Study of certain algebraic surfaces.</p></li>
 <li> <h4 id="representation-theory-pooja-singla-r-venkatesh-apoorva-khare"> Representation theory (<a href="https://sites.google.com/site/poojasingla7/Home">Pooja Singla</a>, <a href="http://math.iisc.ac.in/~rvenkat/">R. Venkatesh</a>, <a href="http://math.iisc.ac.in/~khare/">Apoorva Khare</a>)</h4>
-  <p>Representations of finite groups and finite dimensional associative algebras. Representations of p-adic groups and of other linear groups with entries from local rings, Representations of finitely generated discrete groups </p>  </li>
+  <p>Representations of finite groups and finite dimensional associative algebras. Representations of p-adic groups and of other linear groups with entries from local rings, Representations of finitely generated discrete groups, Representations of semisimple and Kac-Moody Lie algebras, quantum groups, and algebras with triangular decomposition. </p>  </li>
     <li><h4 id="number-theory-soumya-das"> Number theory (<a href="https://sites.google.com/site/somuhomepage/">Soumya Das</a>)</h4></li>
 </ul>
 </p>
@@ -35,7 +35,7 @@ title: Research areas - Maths@IISc
 <h3 id="Discrete-mathematics">Discrete Mathematics</h3>
 <p>
   <ul>
-<li><h4 id="discrete-mathematics-and-linear-algebra-arvind-ayyer-apoorva-khare-srikanth-k-iyer"> Combinatorics (<a href="http://math.iisc.ac.in/~arvind/">Arvind Ayyer</a>, <a href="http://math.iisc.ac.in/~skiyer/">Srikanth K. Iyer</a>)</h4>
+<li><h4 id="discrete-mathematics-and-linear-algebra-arvind-ayyer-apoorva-khare-srikanth-k-iyer"> Combinatorics (<a href="http://math.iisc.ac.in/~arvind/">Arvind Ayyer</a>, <a href="http://math.iisc.ac.in/~skiyer/">Srikanth K. Iyer</a>, <a href="http://math.iisc.ac.in/~khare/">Apoorva Khare</a>)</h4>
     <p> Algebraic and enumerative combinatorics,  random geometric graphs, graph limits, symmetric functions, Schur polynomials, determinantal identities,
 Coxeter groups, lattice polytopes and polyhedra.</p></li>
 </ul>
