--- a/research-areas.html
+++ b/research-areas.html
@@ -4,7 +4,7 @@ title: Research areas - Maths@IISc
 
 <p>The Department aims to promote close collaboration between various mathematical disciplines and with other applied areas. The areas of current research are :</p>
 
-<h3 id="algebra">Algebra and Number theory</h3>
+<h3 id="algebra">Algebra and Number Theory</h3>
 <p>
   <ul>
     <li> <h4 id="commutative-algebra-and-algebraic-geometry-abhishek-banerjee-dilip-patil"> Commutative Algebra and Algebraic Geometry (<a href="https://sites.google.com/site/abhishekb1313/">Abhishek Banerjee</a>, <a href="http://math.iisc.ac.in/~patil/">Dilip Patil</a>)</h4>
@@ -24,7 +24,7 @@ title: Research areas - Maths@IISc
       <p> Hilbert modules, multivariable operator theory, Hilbert space operator theory in some domains in two and three dimensional complex spaces.</p></li>
     <li><h4 id="harmonic-analysis-s-thangavelu-e-k-narayanan">Harmonic Analysis (<a href="http://math.iisc.ac.in/~veluma/">S. Thangavelu</a>, <a href="http://math.iisc.ac.in/~naru/">E. K. Narayanan</a>)</h4>
 <p> Analysis on the Heisenberg group and generalisations such as H-type groups, analysis on symmetric spaces of non compact type and on semisimple Lie groups, spectral multipliers of Laplcians and sub-Laplacians on these spaces, integral geometry on homogeneous spaces and relations with complex analysis.</p>
-    <li> <h4 id="matrix"> Positivity and matrix analysis (<a href="http://math.iisc.ac.in/~khare/">Apoorva Khare</a>) </h4><p>Positive matrices and functions operating on them, positivity preservation, structured matrices</p></li> 
+    <li> <h4 id="matrix"> Positivity and Matrix Analysis (<a href="http://math.iisc.ac.in/~khare/">Apoorva Khare</a>) </h4><p>Positive matrices and functions operating on them, positivity preservation, structured matrices</p></li> 
     <li> <h4 id="several-complex-variables-kaushal-verma-gautam-bharali-vamsi-pritham-pingali">Several Complex Variables (<a href="http://math.iisc.ac.in/~kverma/">Kaushal Verma</a>, <a href="http://math.iisc.ac.in/~bharali/">Gautam Bharali</a>, <a href="http://math.iisc.ac.in/~vamsipingali/">Vamsi Pritham Pingali</a>)</h4>
 <p> Holomorphic mappings, convexity and its applications to function theory, finite-type domains, pluripotential theory, holomorphic interpolation, Ohsawa-Takegoshi type extension theorems, and complex dynamical systems.</p>
     </li>
