--- a/nmi-dist.html
+++ b/nmi-dist.html
@@ -19,7 +19,7 @@ title: NMI Distinguished Associates
       </div>
       {% if stu.email %}
         <div>
-          <strong>E-mail:</strong> <a href="mailto:{{stu.email}}">{{stu.email}}</a>
+          <strong>Email:</strong> {{stu.email}}</a>
         </div>
         {% endif %}
         {% if stu.webpage %}
