--- a/faculty.html
+++ b/faculty.html
@@ -7,6 +7,8 @@ title: Faculty members
 
 <h4>Alphabetically by last name</h4>
 
+<h4>To Email: UserID[at]iisc.in</h4>
+
 <table class="table table-striped">
   {% for fac in site.data.faculty %}
   <tr>
@@ -22,10 +24,10 @@ title: Faculty members
           <strong>Phone :</strong> +91-80 2293 {{ fac.phone-ext}}
         </div>
         <div>
-          <strong>E-mail :</strong> <a href="mailto:{{fac.user-id}}@iisc.ac.in">{{fac.user-id}}@iisc.ac.in</a>
+          <strong>UserID :</strong> {{fac.user-id}}
         </div>
         <div>
-          <strong>Designation :</strong> {{ fac.position }} 
+          <strong>Designation :</strong> {{ fac.position }}
         </div>
         <!-- <div>
         <strong>Web page:</strong> <a href="http://math.iisc.ac.in/~{{fac.user-id}}/">http://math.iisc.ac.in/~{{fac.user-id}}/</a>
