--- a/inspire.html
+++ b/inspire.html
@@ -3,8 +3,9 @@ title: INSPIRE fellows and DST scientists
 ---
 <div class="col-md-12">
 <h2>INSPIRE fellows and DST scientists</h2>
-  
+
   <h4>Alphabetically by last name</h4>
+  <h4>To Email: UserID[at]iisc.in</h4>
 
 <table class="table table-striped">
   {% for stu in site.data.InspireDST %}
@@ -20,7 +21,7 @@ title: INSPIRE fellows and DST scientists
         <strong>Research areas:</strong> {{ stu.research-areas}}
       </div>
         <div>
-          <strong>E-mail:</strong> <a href="mailto:{{stu.user-id}}@iisc.ac.in">{{stu.user-id}}@iisc.ac.in</a>
+          <strong>UserID:</strong> {{stu.user-id}}
         </div>
       </div>
     </td>
