--- a/postdocs.html
+++ b/postdocs.html
@@ -3,8 +3,9 @@ title: Postdocs
 ---
 <div class="col-md-12">
 <h2>Postdocs</h2>
-  
+
   <h4>Alphabetically by last name</h4>
+  <h4>To Email: UserID[at]iisc.in</h4>
 
 <table class="table table-striped">
   {% for stu in site.data.postdocs %}
@@ -18,7 +19,7 @@ title: Postdocs
         {% endif %}
       </div>
         <div>
-          <strong>E-mail:</strong> <a href="mailto:{{stu.user-id}}@iisc.ac.in">{{stu.user-id}}@iisc.ac.in</a>
+          <strong>UserID:</strong>{{stu.user-id}}
         </div>
       </div>
     </td>
