--- a/students-intdisphd.html
+++ b/students-intdisphd.html
@@ -5,7 +5,7 @@ title: Interdisciplinary PhD students
 <h2 class="text-center">Inter-disciplinary PhD students</h2>
 
 <h4 class="text-center">By year of joining</h4>
-
+<h4>To Email: UserID[at]iisc.in</h4>
 
 {% assign students = site.data.students | where: "programme", "Interdisiplinary PhD" %}
 {% assign years = students | group_by: "year-of-joining" %}
@@ -22,7 +22,7 @@ title: Interdisciplinary PhD students
         <strong>Program:</strong> {{ stu.programme}}
       </div>
         <div>
-          <strong>E-mail:</strong> <a href="mailto:{{stu.user-id}}@iisc.ac.in">{{stu.user-id}}@iisc.ac.in</a>
+          <strong>E-mail:</strong> {{stu.user-id}}
         </div>
       </div>
     </td>
