--- a/students-intphd.html
+++ b/students-intphd.html
@@ -5,7 +5,7 @@ title: Integrated PhD students
 <h2 class="text-center">Integrated PhD students</h2>
 
 <h4 class="text-center">By year of joining</h4>
-
+<h4>To Email: UserID[at]iisc.in</h4>
 
 {% assign students = site.data.students | where: "programme", "Integrated PhD" %}
 {% assign years = students | group_by: "year-of-joining" %}
@@ -41,13 +41,8 @@ title: Integrated PhD students
         <strong>Program:</strong> {{ stu.programme}}
       </div> -->
         <div>
-          <strong>E-mail:</strong>
-          {% if stu.user-id %}
-           <a href="mailto:{{stu.user-id}}@iisc.ac.in">{{stu.user-id}}@iisc.ac.in</a>
-          {% endif %}
-          {% if stu.email %}
-                   <a href="mailto:{{stu.email}}">{{stu.email}}</a>
-                  {% endif %}
+          <strong>UserID:</strong>
+          {{stu.user-id}}
         </div>
     </td>
     <td>
