--- a/inspire.html
+++ b/inspire.html
@@ -5,7 +5,7 @@ title: INSPIRE fellows and DST scientists
 <h2>INSPIRE fellows and DST scientists</h2>
 
   <h4>Alphabetically by last name</h4>
-  <h4>To Email: UserID[at]iisc.in</h4>
+  <h4>To Email: UserID[at]iisc.ac.in</h4>
 
 <table class="table table-striped">
   {% for stu in site.data.InspireDST %}
