--- a/postdocs.html
+++ b/postdocs.html
@@ -5,7 +5,7 @@ title: Postdocs
 <h2>Postdocs</h2>
 
   <h4>Alphabetically by last name</h4>
-  <h4>To Email: UserID[at]iisc.in</h4>
+  <h4>To Email: UserID[at]iisc.ac.in</h4>
 
 <table class="table table-striped">
   {% for stu in site.data.postdocs %}
