--- a/students-phd.html
+++ b/students-phd.html
@@ -6,7 +6,7 @@ title: PhD students
 
 <h4 class="text-center">By year of joining</h4>
 
-<h4>To Email: UserID[at]iisc.in</h4>
+<h4>To Email: UserID[at]iisc.ac.in</h4>
 
 {% assign students = site.data.students | where: "programme", "PhD" %}
 {% assign years = students | group_by: "year-of-joining" %}
