rooparoopa as address

--- a/contact-us.html
+++ b/contact-us.html
@@ -14,7 +14,7 @@
 <strong>Fax:</strong> +91-80-2360 0146 <br> <br>
 
 <strong>Email:</strong>
-<a href="mailto:chairman.math@iisc.ac.in">chairman.math[at]iisc[dot]ac[dot]in</a>
+chairman.math[at]iisc[dot]ac[dot]in
 </address>
 
   <a href="mailto:surender@iisc.ac.in">Contact
