--- a/people-staff.html
+++ b/people-staff.html
@@ -35,7 +35,7 @@
                 <tr valign="top">
                   <td width="120">Email</td>
                   <td width="5">:</td>
-                  <td width="400"><a href="mailto:roopa@iisc.ac.in">roopa@iisc.ac.in</a></td>
+                  <td width="400">rooparoopa[at]iisc.ac.in</a></td>
                 </tr>
                 <tr valign="top">
                   <td background="images/div-horz.gif" colspan="3">&nbsp;</td>
@@ -53,7 +53,7 @@
                 <tr valign="top">
                   <td width="120">Email</td>
                   <td width="5">:</td>
-                  <td width="400"><a href="mailto:rnaren@iisc.ac.in">rnaren@iisc.ac.in</a></td>
+                  <td width="400">rnaren[at]iisc.ac.in</td>
                 </tr>
                 <tr valign="top">
                   <td background="images/div-horz.gif" colspan="3">&nbsp;</td>
