--- a/faculty.html
+++ b/faculty.html
@@ -26,9 +26,9 @@ title: Faculty members
         <div>
           <strong>UserID :</strong> {{fac.user-id}}
         </div>
-        <div>
+        <!-- <div>
           <strong>Designation :</strong> {{ fac.position }}
-        </div>
+        </div> -->
         <!-- <div>
         <strong>Web page:</strong> <a href="http://math.iisc.ac.in/~{{fac.user-id}}/">http://math.iisc.ac.in/~{{fac.user-id}}/</a>
       </div> -->
