--- a/research-areas.html
+++ b/research-areas.html
@@ -10,7 +10,7 @@ title: Research areas - Maths@IISc
     <li> <h4 id="commutative-algebra-and-algebraic-geometry-abhishek-banerjee-dilip-patil"> Commutative Algebra and Algebraic Geometry (<a href="https://sites.google.com/site/abhishekb1313/">Abhishek Banerjee</a>, <a href="http://math.iisc.ac.in/~patil/">Dilip Patil</a>)</h4>
 <p>Study of derivation modules of curves and hypersurfaces, connection with Zariski - Lipman conjecture, monomial curves, complete intersections and set theoretic complete intersections, intersection theory of algebraic varieties, minimal number of generators for ideals and modules. Study of certain algebraic surfaces.</p></li>
 <li> <h4 id="representation-theory-pooja-singla-r-venkatesh-apoorva-khare"> Representation Theory (<a href="https://sites.google.com/site/poojasingla7/Home">Pooja Singla</a>, <a href="http://math.iisc.ac.in/~rvenkat/">R. Venkatesh</a>, <a href="http://math.iisc.ac.in/~khare/">Apoorva Khare</a>)</h4>
-  <p>Representations of: finite groups and finite dimensional associative algebras; p-adic groups and other linear groups with entries from local rings; finitely generated discrete groups; semisimple and Kac-Moody Lie algebras; quantum groups; algebras with triangular decomposition. </p>  </li>
+  <p>Representations of: finite groups and finite dimensional associative algebras; p-adic groups and other linear groups with entries from local rings; finitely generated discrete groups. Representations of Lie algebras: semisimple, Kac-Moody, Borcherds, and current algebras; quantum groups; algebras with triangular decomposition. </p>  </li>
     <li><h4 id="number-theory-soumya-das"> Number Theory (<a href="https://sites.google.com/site/somuhomepage/">Soumya Das</a>)</h4></li>
 </ul>
 </p>
