--- a/research-areas.html
+++ b/research-areas.html
@@ -35,9 +35,9 @@ title: Research areas - Maths@IISc
 <h3 id="Discrete-mathematics">Discrete Mathematics</h3>
 <p>
   <ul>
-<li><h4 id="discrete-mathematics-and-linear-algebra-arvind-ayyer-apoorva-khare-srikanth-k-iyer"> Combinatorics (<a href="http://math.iisc.ac.in/~arvind/">Arvind Ayyer</a>, <a href="http://math.iisc.ac.in/~skiyer/">Srikanth K. Iyer</a>, <a href="http://math.iisc.ac.in/~khare/">Apoorva Khare</a>)</h4>
+<li><h4 id="discrete-mathematics-and-linear-algebra-arvind-ayyer-apoorva-khare-srikanth-k-iyer"> Combinatorics (<a href="http://math.iisc.ac.in/~arvind/">Arvind Ayyer</a>, <a href="http://math.iisc.ac.in/~skiyer/">Srikanth K. Iyer</a>, <a href="http://math.iisc.ac.in/~khare/">Apoorva Khare</a>,  <a href="http://math.iisc.ac.in/~rvenkat/">R. Venkatesh</a>)</h4>
     <p> Algebraic and enumerative combinatorics,  random geometric graphs, graph limits, symmetric functions, Schur polynomials, determinantal identities,
-Coxeter groups, lattice polytopes and polyhedra.</p></li>
+Coxeter groups, root systems, structure theory of Borcherds-Kac-Moody algebras and connections to algebraic graph theory, lattice polytopes and polyhedra.</p></li>
 </ul>
 </p>
 
