--- a/course-list.html
+++ b/course-list.html
@@ -1,7 +1,7 @@
 ---
 title: Courses
 ---
-<p style="margin-bottom: 5px">
+<p style="margin-bottom: 100">
   <ul>
      <li><h4><a href="#aug2017">August 2017 courses</a></h4></li>
      <li><h4><a href="#jan2018">January 2018 courses</a></h4></li>
