--- a/course-list.html
+++ b/course-list.html
@@ -1,10 +1,10 @@
 ---
 title: Courses
 ---
-<p style="margin-bottom: 100">
+<p style="margin-bottom: 100px">
   <ul>
      <li><h4><a href="#aug2017">August 2017 courses</a></h4></li>
-     <li><h4><a href="#jan2018">January 2018 courses</a></h4></li>
+     <li><h4><a href="#jan2018">January 2018</a></h4></li>
   </ul>
 </p>
 
