--- a/course-list.html
+++ b/course-list.html
@@ -1,10 +1,10 @@
 ---
 title: Courses
 ---
-<p style="margin-bottom: 100px">
+<p>
   <ul>
      <li><h4><a href="#aug2017">August 2017 courses</a></h4></li>
-     <li><h4><a href="#jan2018">January 2018</a></h4></li>
+     <li><h4><a href="#jan2018">January 2018 courses</a></h4></li>
   </ul>
 </p>
 
@@ -16,7 +16,7 @@ title: Courses
 
 </div>
 
-<p style="margin-top: 5px; margin-bottom: 5px">
+<p style="margin-top: 20px; margin-bottom: 20px">
   <ul>
     <li><h4><a href="#aug2017">August 2017 courses</a></h4></li>
     <li><h4><a href="#jan2018">January 2018 courses</a></h4></li>
