--- a/course-list.html
+++ b/course-list.html
@@ -31,15 +31,17 @@ title: Courses
 
 </div>
 
-<h3>Earlier semesters</h3>
-<ul>
-  <li><a href="courses2016-17.html"> Academic Year 2016-17</a></li>
-  <li> <a href="courses2015AD.html"> August-December 2015</a></li>
-  <li> <a href="courses2015JA.html">January-April 2015</a></li>
-  <li> <a href="courses2014AD.html"> August-December 2014</a></li>
-  <li> <a href="courses2014JA.html"> January-April 2014</a></li>
-  <li> <a href="courses2013AD.html"> August-December 2013</a></li>
-  <li> <a href="coursesold.html"> Earlier courses</a></li>
-  </li>
+<div>
+<p style="margin-top: 40px">  
+ <h3>Earlier semesters</h3>
+ <ul>
+    <li><a href="courses2016-17.html"> Academic Year 2016-17</a></li>
+    <li> <a href="courses2015AD.html"> August-December 2015</a></li>
+    <li> <a href="courses2015JA.html">January-April 2015</a></li>
+    <li> <a href="courses2014AD.html"> August-December 2014</a></li>
+    <li> <a href="courses2014JA.html"> January-April 2014</a></li>
+    <li> <a href="courses2013AD.html"> August-December 2013</a></li>
+    <li> <a href="coursesold.html"> Earlier courses</a></li>
  </ul>
- </div>
+</p>
+</div>
