--- a/research-areas.html
+++ b/research-areas.html
@@ -49,10 +49,10 @@ Coxeter groups, root systems, structure theory of Borcherds-Kac-Moody algebras a
 <p> Combinatorial manifolds, PL-manifolds, minimal triangulation of manifolds, triangulation of spheres and projective planes with few vertices, pseudomanifolds With small excess, equivelar polyhectral maps.</p>
  </li>
     <li><h4 id="differential-geometry-harish-seshadri-vamsi-pritham-pingali-subhojoy-gupta">Differential Geometry (<a href="http://math.iisc.ac.in/~harish/">Harish Seshadri</a>, <a href="http://math.iisc.ac.in/~vamsipingali/">Vamsi Pritham Pingali</a>, <a href="http://math.iisc.ac.in/~subhojoy/">Subhojoy Gupta</a>)</h4>
-<p> Manifolds of positive curvature (Ricci, scalar and isotropic), Einstein manifolds, conformal geometry (Weyl curvature and the Yamabe invariant), Gromov hyperbolic spaces, Teichmuller theory, Kahler geometry, complex Monge-Ampere type equations, metrics on Vector bundles, applications of differential geometry in computer science.</p>
+<p> Manifolds of positive curvature, Einstein manifolds, conformal geometry, Teichmuller theory, Kahler geometry, complex Monge-Ampere type equations, special metrics on vector bundles, applications of differential geometry in computer science.</p>
  </li>
     <li><h4 id="low-dimensional-topology-siddhartha-gadgil-subhojoy-gupta">Low Dimensional Topology (<a href="http://math.iisc.ac.in/~gadgil/">Siddhartha Gadgil</a>, <a href="http://math.iisc.ac.in/~subhojoy/">Subhojoy Gupta</a>)</h4>
-<p> Topology of three-manifolds and smooth four-manifolds, Hyperbolic geometry, Geometric group theory, Heegaard Floer theory and its relations to geometric topology.</p>
+<p> Topology of three-manifolds and smooth four-manifolds, hyperbolic geometry, geometric group theory, Heegaard Floer theory and its relations to geometric topology.</p>
 </li>
 </ul>
 </p>
