--- a/inspire.html
+++ b/inspire.html
@@ -1,5 +1,5 @@
 ---
-title: INSPIRE fellows and DST scientists
+title: INSPIRE Fellows and DST Scientists
 ---
 <div class="col-md-12">
 <h2>INSPIRE fellows and DST scientists</h2>
