--- a/phds.html
+++ b/phds.html
@@ -1,8 +1,8 @@
 ---
-title: Ph.D. degrees awarded
+title: Ph.D. Degrees Awarded
 ---
 <div class="col-md-12">
-<h2> Ph.D. Degrees awarded by the department (by Year) </h2>
+<h2> Ph.D. degrees awarded by the department (by year) </h2>
 
 {% assign years = site.data.phds | group_by: "year" %}
 
