tiny changes in heading & spacing

--- a/phds.html
+++ b/phds.html
@@ -20,7 +20,7 @@ title: Ph.D. Degrees Awarded
   {% for deg in y.items %}
 
   <ul>
-   <li> Name:<b> {{ deg.name }} </b> </li>
+   <li> <p style="margin-top : 15px">Name:<b> {{ deg.name }} </b> </p></li>
    <li> <b>Title:</b> {{ deg.title }} </li>
    <li> <b>Supervisor:</b> {{ deg.advisor }}{% if deg.present %} </li>
    <li> <b>Present Position:</b>  {{ deg.present}} </li>
