--- a/phds.html
+++ b/phds.html
@@ -19,13 +19,12 @@ title: Ph.D. Degrees Awarded
 <div class="collapse" id="{{y.name}}">
   {% for deg in y.items %}
 
-  <ul>
-   <li> <p style="margin-top: 15px; margin-bottom: -15px"> <b>Name:</b> <i>{{ deg.name }}</i> </p></li>
-   <li> <b>Title:</b> {{ deg.title }} </li>
-   <li> <b>Supervisor:</b> {{ deg.advisor }}{% if deg.present %} </li>
-   <li> <b>Present Position:</b>  {{ deg.present}} </li>
+   <p style="margin-top: 15px; margin-bottom: -7px"> <b>Name:</b> <em>{{ deg.name }}</em> </p></li>
+   <p> <b>Title:</b> {{ deg.title }} </p>
+   <p> <b>Supervisor:</b> {{ deg.advisor }}{% if deg.present %} </p>
+   <p> <b>Present Position:</b>  {{ deg.present}} </p>
  {% endif %}
- </ul>
+     
  {% endfor %}
 </div>
 
