--- a/students-intdisphd.html
+++ b/students-intdisphd.html
@@ -1,8 +1,8 @@
 ---
-title: Interdisciplinary PhD students
+title: Interdisciplinary PhD Students
 ---
 <div class="col-md-12">
-<h2 class="text-center">Inter-disciplinary PhD students</h2>
+<h2 class="text-center">Interdisciplinary Ph.D. students</h2>
 
 <h4 class="text-center">By year of joining</h4>
 <h4>To Email: UserID[at]iisc.ac.in</h4>
