correction iisc.ac.in

--- a/students-intdisphd.html
+++ b/students-intdisphd.html
@@ -1,5 +1,5 @@
 ---
-title: Interdisciplinary PhD Students
+title: Interdisciplinary Ph.D. Students
 ---
 <div class="col-md-12">
 <h2 class="text-center">Interdisciplinary Ph.D. students</h2>
