--- a/students-intphd.html
+++ b/students-intphd.html
@@ -1,8 +1,8 @@
 ---
-title: Integrated PhD students
+title: Integrated Ph.D. Students
 ---
 <div class="col-md-12">
-<h2 class="text-center">Integrated PhD students</h2>
+<h2 class="text-center">Integrated Ph.D. students</h2>
 
 <h4 class="text-center">By year of joining</h4>
 <h4>To Email: UserID[at]iisc.ac.in</h4>
