--- a/students-phd.html
+++ b/students-phd.html
@@ -1,8 +1,8 @@
 ---
-title: PhD students
+title: Ph.D. Students
 ---
 <div class="col-md-12">
-<h2 class="text-center">PhD students</h2>
+<h2 class="text-center">Ph.D. students</h2>
 
 <h4 class="text-center">By year of joining</h4>
 
