--- a/faculty.html
+++ b/faculty.html
@@ -7,7 +7,7 @@ title: Faculty Members
 
 <h4>Alphabetically by last name</h4>
 
-  <p><b>To send email: <font face="Courier New">UserID[at]iisc.ac.in</font></b></p>
+  <p><b>To send email: <font face="Courier New" size="6">UserID[at]iisc.ac.in</font></b></p>
 
 <table class="table table-striped">
   {% for fac in site.data.faculty %}
