--- a/inspire.html
+++ b/inspire.html
@@ -5,7 +5,8 @@ title: INSPIRE Fellows and DST Scientists
 <h2>INSPIRE fellows and DST scientists</h2>
 
   <h4>Alphabetically by last name</h4>
-  <h4>To Email: UserID[at]iisc.ac.in</h4>
+  
+   <p><b>To send email: <font face="Courier New" size="3">UserID[at]iisc.ac.in</font></b></p>
 
 <table class="table table-striped">
   {% for stu in site.data.InspireDST %}
