several style changes

--- a/students-intdisphd.html
+++ b/students-intdisphd.html
@@ -2,9 +2,9 @@
 title: Interdisciplinary Ph.D. Students
 ---
 <div class="col-md-12">
-<h2 class="text-center">Interdisciplinary Ph.D. students</h2>
+<h2>Interdisciplinary Ph.D. students</h2>
 
-<h4 class="text-center">By year of joining</h4>
+<h4>By year of joining</h4>
   
   <p><b>To send email: <font face="Courier New" size="3">UserID[at]iisc.ac.in</font></b></p>
 
