--- a/students-phd.html
+++ b/students-phd.html
@@ -2,11 +2,13 @@
 title: Ph.D. Students
 ---
 <div class="col-md-12">
-<h2 class="text-center">Ph.D. students</h2>
+<h2>Ph.D. students</h2>
+  
+<h4>By year of joining</h4>
   
   <p><b>To send email: <font face="Courier New" size="3">UserID[at]iisc.ac.in</font></b></p>
 
-<h4>To Email: UserID[at]iisc.ac.in</h4>
+
 
 {% assign students = site.data.students | where: "programme", "PhD" %}
 {% assign years = students | group_by: "year-of-joining" %}
