--- a/trainees.html
+++ b/trainees.html
@@ -16,7 +16,7 @@ title: Project Staff
       <div><h4>{{ stu.name }}</h4> </div>
       {% if stu.email %}
         <div>
-          <strong>UserID:</strong> {{stu.email}}
+          <strong>UserID:</strong> {{stu.user-id}}
         </div>
         {% endif %}
         {% if stu.webpage %}
