--- a/trainees.html
+++ b/trainees.html
@@ -2,9 +2,9 @@
 title: Project Staff
 ---
 <div class="col-md-12">
-<h2 class="text-center">Project Staff</h2>
+<h2>Project Staff</h2>
 
-<h2>Alphabetically by last name</h2>
+<h4>Alphabetically by last name</h4>
   
   <p><b>To send email: <font face="Courier New" size="3">UserID[at]iisc.ac.in</font></b></p>
   
