--- a/trainees.html
+++ b/trainees.html
@@ -14,7 +14,7 @@ title: Project Staff
   <tr>
     <td class="col-md-7">
       <div><h4>{{ stu.name }}</h4> </div>
-      {% if stu.email %}
+      {% if stu.user-id %}
         <div>
           <strong>UserID:</strong> {{stu.user-id}}
         </div>
