--- a/research-areas.html
+++ b/research-areas.html
@@ -89,7 +89,7 @@ Coxeter groups, root systems, structure theory of Borcherds-Kac-Moody algebras a
     <li><h4 id="time-series-analysis-govindan-rangarajan-srikanth-k-iyer">Time Series Analysis (<a href="http://math.iisc.ac.in/~rangaraj/">Govindan Rangarajan</a>, <a href="http://math.iisc.ac.in/~skiyer/">Srikanth K. Iyer</a>)</h4>
 <p> Application of time series analysis techniques to neuroscience esp. brain-machine interface, applications to geophysics.</p>
 </li>
-    <li><h4 id="finance">Mathematical finance (<a href="http://math.iisc.ac.in/~rangaraj/">Govindan Rangarajan</a>, <a href="http://math.iisc.ac.in/~mkg/">Mrinal K. Ghosh</a>) </h4></li>
+    <li><h4 id="finance">Mathematical finance (<a href="http://math.iisc.ac.in/~rangaraj/">Govindan Rangarajan</a>, <a href="http://math.iisc.ac.in/~mkg/">Mrinal K. Ghosh</a>, <a href="http://math.iisc.ac.in/~skiyer/">Srikanth K. Iyer</a>) </h4><p> Option pricing, portfolio optimization, interest rate models, and credit risk</p></li>
 </ul>
 </p>
 
