added missing topics, some clean-up

--- a/research-areas.html
+++ b/research-areas.html
@@ -3,7 +3,7 @@ title: Research Areas
 ---
 <h2>Research Areas</h2>
 
-<p style="margin-top: 8px>The Department aims to promote close collaboration between various mathematical disciplines and with other applied areas. The areas of current research are:</p>
+<p style="margin-top: 8px">The Department aims to promote close collaboration between various mathematical disciplines and with other applied areas. The areas of current research are:</p>
 
 <h3 id="algebra">Algebra and Number Theory</h3>
 <p>
