--- a/research-areas.html
+++ b/research-areas.html
@@ -27,7 +27,7 @@ title: Research Areas
         <p> Hilbert modules, multivariable operator theory, holomorphic-geometry methods for the study of commuting operator tuples.</p></li>
     <li><h4 id="harmonic-analysis-s-thangavelu-e-k-narayanan">Harmonic Analysis (<a href="http://math.iisc.ac.in/~naru/">E. K. Narayanan</a>, <a href="http://math.iisc.ac.in/~veluma/">S. Thangavelu</a>)</h4>
         <p> Analysis on the Heisenberg group and generalisations such as H-type groups, analysis on symmetric spaces of non-compact type and on semisimple Lie groups, spectral multipliers of Laplcians and sub-Laplacians on these spaces, integral geometry on homogeneous spaces and relations with complex analysis.</p>
-    <li> <h4 id="matrix"> Positivity and Matrix Analysis (<a href="http://math.iisc.ac.in/~khare/">Apoorva Khare</a>) </h4><p>Positive matrices and functions operating on them, positivity preservation, structured matrices</p></li> 
+    <li> <h4 id="matrix"> Positivity and Matrix Analysis (<a href="http://math.iisc.ac.in/~khare/">Apoorva Khare</a>) </h4><p>Positive matrices and functions operating on them, positivity preservation, structured matrices.</p></li> 
     <li> <h4 id="several-complex-variables-kaushal-verma-gautam-bharali-vamsi-pritham-pingali">Several Complex Variables (<a href="http://math.iisc.ac.in/~bharali/">Gautam Bharali</a>, <a href="http://math.iisc.ac.in/~vamsipingali/">Vamsi Pritham Pingali</a>, <a href="http://math.iisc.ac.in/~kverma/">Kaushal Verma</a>)</h4>
          <p> Holomorphic mappings, holomorphic interpolation, Ohsawa-Takegoshi type extension theorems. Invariant metrics: estimates, metric geometry of hyperbolic domains. Convexity, finite-type domains. Pluripotential theory and holomorphic dynamical systems.</p></li></li>
   </ul>
