added missing topics, some clean-up

--- a/research-areas.html
+++ b/research-areas.html
@@ -21,9 +21,9 @@ title: Research Areas
 <h3 id="analysis">Analysis</h3>
 <p>
   <ul> 
-    <li><h4 id="differential-equations-ak-nandakumaran-thirupati-gudi">Differential Equations (<a href="http://math.iisc.ac.in/~gudi/">Thirupati Gudi</a>, <a href="http://math.iisc.ac.in/~nands/">A.K. Nandakumaran</a>)</h4>
+    <li><h4 id="differential-equations-ak-nandakumaran-thirupati-gudi">Differential Equations (<a href="http://math.iisc.ac.in/~gudi/">Thirupathi Gudi</a>, <a href="http://math.iisc.ac.in/~nands/">A.K. Nandakumaran</a>)</h4>
         <p> Homogenization of partial differential equations, controllability, viscosity solutions. Numerical methods for partial differential equations.</p> </li>
-    <li><h4 id="functional-analysis-and-operator-theory-gadadhar-misra-tirthankar-bhattacharya">Functional Analysis and Operator Theory (<a href="http://math.iisc.ac.in/~tirtha/">Tirthankar Bhattacharya</a>, <a href="http://math.iisc.ac.in/~gm/">Gadadhar Misra</a>)</h4>
+    <li><h4 id="functional-analysis-and-operator-theory-gadadhar-misra-tirthankar-bhattacharya">Functional Analysis and Operator Theory (<a href="http://math.iisc.ac.in/~tirtha/">Tirthankar Bhattacharyya</a>, <a href="http://math.iisc.ac.in/~gm/">Gadadhar Misra</a>)</h4>
         <p> Hilbert modules, multivariable operator theory, holomorphic-geometry methods for the study of commuting operator tuples.</p></li>
     <li><h4 id="harmonic-analysis-s-thangavelu-e-k-narayanan">Harmonic Analysis (<a href="http://math.iisc.ac.in/~naru/">E. K. Narayanan</a>, <a href="http://math.iisc.ac.in/~veluma/">S. Thangavelu</a>)</h4>
         <p> Analysis on the Heisenberg group and generalisations such as H-type groups, analysis on symmetric spaces of non-compact type and on semisimple Lie groups, spectral multipliers of Laplcians and sub-Laplacians on these spaces, integral geometry on homogeneous spaces and relations with complex analysis.</p>
