--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <img src="department.jpg" alt="" width="100%">
   <div class="col-md-6">
     <h3>Research</h3>
-    The department is active in research in most areas of pure and applied mathematics, including algebra, analysis,
-    discrete mathematics, geometry/topology, mathematical finance, number theory, numerical analysis, partial
-    differential equations, probability, representation theory and time-series analysis.
+    The department is active in research in most areas of pure and applied mathematics,
+    including Algebra and  Number theory, Analysis,
+    Discrete mathematics, Geometry/Topology, Mathematical finance, Numerical analysis, Partial
+    differential equations, Probability, Representation theory and Time-series analysis.
       <ul>
         <li><a href="research-areas.html">Research Areas</a></li>
         <li><a href="faculty">Faculty</a></li>
