--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <div class="col-md-6">
     <h3>Research</h3>
     The department is active in research in most areas of pure and applied mathematics,
-    including Algebra and  Number theory, Analysis,
-    Discrete mathematics, Geometry/Topology, Mathematical finance, Numerical analysis, Partial
-    differential equations, Probability, Representation theory and Time-series analysis.
+    including algebra and  number theory, analysis,
+    discrete mathematics, geometry/topology, mathematical finance, numerical analysis, partial
+    differential equations, probability, representation theory and time-series analysis.
       <ul>
         <li><a href="research-areas.html">Research Areas</a></li>
         <li><a href="faculty">Faculty</a></li>
