--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     differential equations, probability, representation theory and time-series analysis.
       <ul>
         <li><a href="research-areas.html">Research Areas</a></li>
-        <li><a href="faculty">Faculty</a></li>
-        <li><a href="pubs">Research Publications</a></li>
+        <li><a href="faculty.html">Faculty</a></li>
+        <li><a href="pubs.html">Research Publications</a></li>
       </ul>
   </div>
   <div class="col-md-6">
