--- a/catalogue.html
+++ b/catalogue.html
@@ -34,6 +34,7 @@ title: Course Catalogue
      {% endfor %}
    </ol>
     {% endif %}
+    <p><a href="#" class="pull-right">Top</a></p>
 </div>
 
 <div class="row">
