--- a/research-areas.html
+++ b/research-areas.html
@@ -14,7 +14,7 @@ title: Research Areas
     <li> <h4 id="representation-theory-pooja-singla-r-venkatesh-apoorva-khare"> Representation Theory (<a href="http://math.iisc.ac.in/~khare/">Apoorva Khare</a>, <a href="https://sites.google.com/site/poojasingla7/Home">Pooja Singla</a>, <a href="http://math.iisc.ac.in/~rvenkat/">R. Venkatesh</a>)</h4>
          <p>Representations of: finite groups and finite dimensional associative algebras; p-adic groups and other linear groups with entries from local rings; finitely generated discrete groups. Representations of Lie algebras: semisimple, Kac&ndash;Moody, Borcherds, and current algebras; quantum groups; algebras with triangular decomposition. </p></li>
     <li><h4 id="number-theory-soumya-das"> Number Theory (<a href="https://sites.google.com/site/somuhomepage/">Soumya Das</a>)</h4>
-        <p>L-functions of automorphic representations, Fourier coefficients of modular forms, classical analytic number theory.</p></li>
+        <p>Automorphic forms and representations, L-functions, Analytic Number theory.</p></li>
   </ul>
 </p>
 
